# TuniSci

./: .env.sample  .gitattributes  .gitignore  CHAT_MODELS.py  Dockerfile  EMBEDDING_MODELS.py  README.md  authors.txt  authors_cleaned.json  authors_with_h_index.json  authors_with_h_index_2.json  authors_with_h_index_new_11.json  clean_json.py  create_vectorstore.py  docker-compose.yml  elites.py  hindex.py  inference.py  json  open_embedding.py  package-lock.json  package.json  project_status.py  pyproject.toml  rag.py  ranking.html  requirements.txt  roadmap.md  runtime.txt  scholar_scraper.py  scholar_scrapper.py  scholars_ranking.md  streamlit_app.py  table.js  table.txt  tunisian_academic_keywords.py  utils.py
Cohere_embed_v3_english_faiss_index/: index.pkl
Cohere_embed_v3_multilingual_faiss_index/: index.faiss  index.pkl
Paraphrase_MiniLM_L6_v2_faiss_index/: index.faiss  index.pkl
allMiniLM_L6_v2_faiss_index/: index.faiss  index.pkl
all_MiniLM_L6_v2_faiss_index/: index.pkl
cohere_english_faiss_index/: index.pkl
cohere_english_faiss_index_v2/: index.faiss  index.pkl
cohere_faiss_index/: index.pkl
notebooks/: authors.ipynb  data_cleaning.ipynb  htmlgenerator.ipynb  index.ipynb  langchain.ipynb
openai_large_faiss_index/: index.faiss  index.pkl
openai_small_faiss_index/: index.faiss  index.pkl
paraphrase_multilingual_faiss_index/: index.faiss  index.pkl
ranking_files/: style.css
tests/: README.md  debug_azure_api.py  test_azure_api.py  test_cohere_vectorstore.py  test_streamlit_cohere.py  test_streamlit_components.py  test_updated_azure.py
